anypoint-studio/v/6.5/jdk-requirement-wx-workflow.adoc
= To Configure Java JDK (Windows)

. In Search, search for System (Control Panel) and select it.
. Click Advanced System Settings.
. Click Environment Variables.
. In System Variables, select the PATH environment variable.
. Click Edit.
+
If the PATH environment variable does not exist, click New.
. In Edit System Variable (or New System Variable), make sure that the JDK /bin directory of the version you want to configure is the first item in your PATH environment variable, and click OK.
+
[NOTE]
--
Blank spaces are not allowed when defining a path on Windows.
--
+
. Click OK.

To verify that your installation was configured correctly, reopen the command prompt window, and type:

[source,bash,linenums]
----
> java -version
----

This should print the version of the java tool. +
If the version is other than your desired JDK, or you get the error "java: Command not found", then the JDK is not properly installed.


== See Also

* link:/anypoint-studio/v/6.5/studio-configure-vm-task-wx[Configure Studio's Default VM on Windows]
